DI lib 적용 테스트